--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,7 +15,7 @@
   }
 }
 
-.App-header {
+ .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -35,4 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
