--- a/frontend/src/components/ModelArea.css
+++ b/frontend/src/components/ModelArea.css
@@ -1,4 +1,4 @@
 .ModelArea {
-    border: 5px solid rgb(0, 0, 0);
-    background-color: blue;
+  border: 5px solid rgb(0, 0, 0);
+  background-color: rgba(0, 0, 255, 0.5);
 }
