--- a/frontend/src/components/Slider.css
+++ b/frontend/src/components/Slider.css
@@ -1,4 +1,18 @@
 .Slider {
-  height: 100px;
+  height: 200px;
   border: 4px solid red;
+}
+
+.titleCloseBtn {
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.titleCloseBtn {
+  background-color: royalblue;
+  border: khaki;
+  font-size: 25px;
+  cursor: pointer;
 }
