ui bar remodel complete

--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -110,3 +110,11 @@
 .dropdownItemContents:hover {
   background-color: grey;
 }
+
+.dropdownItemLink {
+  text-decoration: none;;
+}
+
+.dropdownItemLabel {
+  color: black;
+}
