--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -14,7 +14,7 @@
 }
 
 /* the ul holding all navigation elements */
-.NavBarNav {
+.NavBarList {
   max-width: 100%;
   height: 100%;
   display: flex; /* make display flexible */
