--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -6,12 +6,12 @@
   --navbar-base-z-index-level: 10;
 }
 
-/* div holding all navbar elements */
+/* div holding all navbar elements
 .NavBar {
   transform: translateX(-45%);
   z-index: var(--navbar-base-z-index-level);
   display: inline-block;
-}
+} */
 
 /* the ul holding all navigation elements */
 .NavBarList {
