--- a/frontend/src/components/SliderSideBar.css
+++ b/frontend/src/components/SliderSideBar.css
@@ -1,9 +1,20 @@
 
 
-
+/* ------------------------------------------------------- */
+/* Slider Siderbar Compnent css */
+/* ------------------------------------------------------- */
 .sliderBarList {
   list-style-type: none;
   margin-left: 4px;
+  padding: 0px;
+}
+
+/* ------------------------------------------------------- */
+/* Slider css */
+/* ------------------------------------------------------- */
+.Slider {
+  height: 150px;
+  border: 4px solid red;
 }
 
 #cardHeaderList {
@@ -33,23 +44,4 @@
   max-width: 20px;
   transform: rotate(-90deg);
   height: auto;
-}
-
-.Slider {
-  height: 150px;
-  border: 4px solid red;
-}
-
-.titleCloseBtn {
-  height: 100px;
-  width: 100px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.titleCloseBtn {
-  background-color: royalblue;
-  border: khaki;
-  font-size: 25px;
-  cursor: pointer;
 }
