--- a/frontend/src/views/PathwayView.css
+++ b/frontend/src/views/PathwayView.css
@@ -34,6 +34,7 @@
 
 /* Sidebar area */
 #RightSideBarAreaCol {
+  /* maybe in the future make fit-content */
   width: var(--right-side-bar-width);
   border-style: solid;
 }
