--- a/frontend/src/components/SliderSideBar.css
+++ b/frontend/src/components/SliderSideBar.css
@@ -8,6 +8,9 @@
   margin-left: 4px;
   padding: 0px;
 }
+.sliderBarList > li {
+  margin: 8px;
+}
 
 /* ------------------------------------------------------- */
 /* Slider css */
