--- a/frontend/src/components/css/ReactFlowArea.css
+++ b/frontend/src/components/css/ReactFlowArea.css
@@ -1,6 +1,13 @@
+/* 
+    NAME: ReactFlowArea.css
+    LAST_EDIT_BY: Cole S.
+    FILE_RESPONSIBILITY: 
+        This file will hold all css pertaining to the react flow components within the actual pathway model
+ */
+
 .react-flow__node.substrate {
     border-radius: 50%;
-    background-image: url(../images/skiPass.jpg);
+    background-image: url(../../images/skiPass.jpg);
     background-size: cover; /* or contain depending on what you want */
     background-position: center center;
     width: 60px;
