--- a/frontend/src/components/css/SliderSideBar.css
+++ b/frontend/src/components/css/SliderSideBar.css
@@ -1,4 +1,10 @@
-
+/* 
+    NAME: SliderSideBar.css
+    LAST_EDIT_BY: Cole S.
+    FILE_RESPONSIBILITY: 
+        This file will hold all css pertaining to the slider bars which will be display within the RightSideBarArea
+        It will contain all the slider bars needed to affect the pathway model
+ */
 
 /* ------------------------------------------------------- */
 /* Slider Siderbar Compnent css */
