--- a/frontend/src/components/css/SliderSideBar.css
+++ b/frontend/src/components/css/SliderSideBar.css
@@ -11,7 +11,8 @@
 /* ------------------------------------------------------- */
 .sliderBarList {
   list-style-type: none;
-  margin-left: 4px;
+  /* margin-left: 4px; */
+  margin: 0px;
   padding: 0px;
 }
 .sliderBarList > li {
@@ -45,12 +46,7 @@
   border: none;
 }
 
-#cardHeaderCaretWhenOpen {
+#cardHeaderCaret {
   max-width: 20px;
-  height: auto;
-}
-#cardHeaderCaretWhenClosed {
-  max-width: 20px;
-  transform: rotate(-90deg);
   height: auto;
 }
