--- a/frontend/src/components/css/NavBar.css
+++ b/frontend/src/components/css/NavBar.css
@@ -18,6 +18,9 @@
 #loadPathwaySelect {
   margin: 0px;
   padding: 4px;
+  
+  background: transparent;
+  border: none !important;
 }
 
 .loadPathwayListTitle {
@@ -27,4 +30,5 @@
 .loadPathwayListAuthor {
   text-align: left;
   padding-left: 16px;
+  margin: 0px;
 }
