fixed some useless code and naming problems

--- a/frontend/src/components/css/ReactFlowArea.css
+++ b/frontend/src/components/css/ReactFlowArea.css
@@ -32,7 +32,7 @@
 
 /* new maybe delete soon
 */
-.react-flow__node.selectorNode {
+.react-flow__node.ReversibleEnzyme {
     font-size: 12px;
     background: #eee;
     border: 1px solid #555;
