--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,6 +27,33 @@
   margin-left: 64px;
 }
 
+/* .cardLinkContainer {
+  flex-shrink: 0;
+} */
+
+.cardNavLink {
+  height: fit-content;
+  color: inherit;
+  text-decoration: none;
+}
+
+.cardNavLink:hover {
+  color: inherit;
+}
+
+/* Root Layout */
+#RootLayout {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+/* Pathway Editor Page */
+#PathwayEditorPage {
+  height: 100%;
+  flex-grow: 1;
+}
+
 /* Splash Page  */
 
 /* #StarterCardArea {
