made all enzymes the revesible custom node and made handlers invisible

--- a/frontend/src/components/css/ReactFlowArea.css
+++ b/frontend/src/components/css/ReactFlowArea.css
@@ -61,3 +61,11 @@
     border-radius: 5px;
     text-align: center; */
 }
+
+.react-flow__node.Molecule .react-flow__handle {
+    opacity: 0;
+  }
+
+.react-flow__node.enzyme .react-flow__handle {
+    opacity: 0;
+  }
