--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,9 +3,21 @@
   height: 100vh;
 }
 
-
 .fontFamily {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+/* element classes */
+ul {
+  list-style-type: none;
+}
+
+.card {
+  margin: 8px;
+}
+
+.horizontalUl {
+  display: inline-block;
 }
 
 
@@ -23,18 +35,16 @@
   text-align: start;
 }
 
-.informationalContentSection {
-  margin-left: 64px;
-}
 
-/* .cardLinkContainer {
-  flex-shrink: 0;
-} */
 
 .cardNavLink {
   height: fit-content;
   color: inherit;
   text-decoration: none;
+}
+.cardNavLink:hover {
+  color: black;
+  border-color: black;
 }
 
 /* for the sign in button when a user is signed in */
