--- a/frontend/src/components/css/SliderSideBar.css
+++ b/frontend/src/components/css/SliderSideBar.css
@@ -9,14 +9,15 @@
 /* ------------------------------------------------------- */
 /* Slider Siderbar Compnent css */
 /* ------------------------------------------------------- */
-/* .sliderBar {
+.sliderBar {
   margin: 8px;
   margin-top: 4px;
   padding: 8px;
   height: fit-content;
-  overflow-x: hidden;
-  overflow-y: auto;
-} */
+  /* overflow-y: scroll;
+  overflow-x: hidden; */
+/*   overflow-y: auto; */
+}
 
 /* div.scroll {
                   margin:4px, 4px;
@@ -31,7 +32,8 @@
 
 .sliderBarList {
   list-style-type: none;
-  /* margin-left: 4px; */
+  height: 300px;
+  overflow-y: scroll;
   margin: 0px;
   padding: 0px;
 }
