can add molecule and enzyme nodes to flowbuilder, css needs major cleaning

--- a/frontend/src/components/css/ReactFlowArea.css
+++ b/frontend/src/components/css/ReactFlowArea.css
@@ -31,6 +31,18 @@
     /* fontweight: 700;  */
 }
 
+.react-flow__node.enzymeBuild {
+    width: 150px;
+    height: 100px;
+    /* transform: skew(20deg); */
+    background: rgb(82, 188, 162);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../../images/glycolysis/aldolase.png);
+    /* fontweight: 700;  */
+}
+
 /* new maybe delete soon
 */
 .react-flow__node.ReversibleEnzyme {
@@ -55,11 +67,17 @@
     justify-content: center;
     align-items: center;
     font-size: 9px;
-    /* font-size: 12px;
-    background: #eee;
-    border: 1px solid rgb(11, 83, 251);
-    border-radius: 5px;
-    text-align: center; */
+}
+
+.react-flow__node.MoleculeBuild {
+    border-radius: 50%;
+    width: 60px;
+    height: 40px;
+    background: rgb(152, 156, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 9px;
 }
 
 .react-flow__node.Molecule .react-flow__handle {
@@ -68,4 +86,12 @@
 
 .react-flow__node.enzyme .react-flow__handle {
     opacity: 0;
+  }
+
+  .react-flow__node.MoleculeBuild .react-flow__handle {
+    opacity: 50;
+  }
+
+.react-flow__node.enzymeBuild .react-flow__handle {
+    opacity: 50;
   }
