--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,10 @@
   height: 100vh;
 }
 
+
+/* ------------------------- */
+/* generalized css */
+/* ------------------------- */
 .fontFamily {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -24,6 +28,29 @@ ul {
   padding-top: 15px;
 }
 
+.growButton { 
+  transition: all .2s ease-in; 
+}
+  
+.growButton:hover { 
+  transform: scale(1.05); 
+}
+
+.growCard { 
+  transition: all .2s ease-in; 
+}
+  
+.growCard:hover { 
+  transform: scale(1.03); 
+}
+
+.ModelAreaChild {
+  position: absolute;
+}
+
+.ReactFlow {
+  z-index: 1;
+}
 
 .informationalSection {
   margin-bottom: 32px;
@@ -87,13 +114,9 @@ ul {
   flex-grow: 1;
 }
 
-/* Splash Page  */
-
-/* #StarterCardArea {
-  text-align: start;
-  margin: 8px;
-} */
-
+/* ------------------------- */
+/* Splash Page Specific */
+/* ------------------------- */
 
 #StarterCard {
   min-width: 200px;
@@ -101,11 +124,6 @@ ul {
   height: 200px;
   margin: 8px;
 }
-
-/* #StarterCard:hover {
-  border-width: 4px;
-  border-color: grey;
-} */
 
 
 /* CSS for model area */
@@ -140,4 +158,80 @@ ul {
   display: flex;
   height: auto;
   width: 250px;
+}
+
+/* ------------------------------------------------------- */
+/* Slider Siderbar Compnent css */
+/* ------------------------------------------------------- */
+.sliderBar {
+  margin: 8px;
+  margin-top: 4px;
+  padding: 8px;
+  height: fit-content;
+}
+
+.sliderBarList {
+  list-style-type: none;
+  height: 300px;
+  overflow-y: scroll;
+  margin: 0px;
+  padding: 0px;
+}
+.sliderBarList > li {
+  margin: 8px;
+}
+
+#sliderComponentTitle {
+  padding: 8px;
+  margin: 0px;
+}
+
+/* ------------------------------------------------------- */
+/* Slider css */
+/* ------------------------------------------------------- */
+.Slider {
+  height: 150px;
+  border: 4px solid red;
+}
+
+#cardHeaderList {
+  display: flex;
+  list-style-type: none;
+  padding: 0px;
+}
+#cardHeaderList > li {
+  margin: 4px;
+  display: inline-block;
+}
+#carHeaderList > li > h4 {
+  margin-left: 8px;
+}
+
+.cardHeaderDropdownButton {
+  background: transparent;
+  border: none;
+}
+
+#cardHeaderCaret {
+  max-width: 12px;
+  height: auto;
+}
+
+#concentrationSlider {
+  box-sizing: border-box;
+}
+
+/* --------------------------- */
+/* Restore */
+/* --------------------------- */
+.save__controls {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 4;
+  font-size: 12px;
+}
+
+.save__controls button {
+  margin-left: 5px;
 }
