--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -235,3 +235,90 @@ ul {
 .save__controls button {
   margin-left: 5px;
 }
+
+ .react-flow__node.substrate {
+    border-radius: 50%;
+    background-size: cover; /* or contain depending on what you want */
+    background-position: center center;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* fontweight: 700;  */
+}
+
+
+.react-flow__node.enzyme {
+    width: 150px;
+    height: 100px;
+    /* transform: skew(20deg); */
+    background: rgb(82, 188, 162);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* fontweight: 700;  */
+}
+
+.react-flow__node.enzymeBuild {
+    width: 150px;
+    height: 100px;
+    /* transform: skew(20deg); */
+    background: rgb(82, 188, 162);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* fontweight: 700;  */
+}
+
+/* new maybe delete soon
+*/
+.react-flow__node.ReversibleEnzyme {
+    font-size: 12px;
+    width: 150px;
+    height: 100px;
+    background: #eee;
+    border: 1px solid #555;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  /* Probably delete soon
+  */
+.react-flow__node.Molecule {
+    border-radius: 50%;
+    width: 60px;
+    height: 40px;
+    background: rgb(152, 156, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 9px;
+}
+
+.react-flow__node.MoleculeBuild {
+    border-radius: 50%;
+    width: 60px;
+    height: 40px;
+    background: rgb(152, 156, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 9px;
+}
+
+.react-flow__node.Molecule .react-flow__handle {
+    opacity: 0;
+  }
+
+.react-flow__node.enzyme .react-flow__handle {
+    opacity: 0;
+  }
+
+  .react-flow__node.MoleculeBuild .react-flow__handle {
+    opacity: 50;
+  }
+
+.react-flow__node.enzymeBuild .react-flow__handle {
+    opacity: 50;
+  }
